Fix authButton:hover overflow-x on mobile devices

--- a/source/components/auth/auth.scss
+++ b/source/components/auth/auth.scss
@@ -4,6 +4,7 @@
     display: flex;
     flex-flow: column nowrap;
     height: 100vh;
+    overflow-x: hidden;
 
     .authWelcome {
         display: flex;
